--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.jvmargs=-Xmx2G
 
 # Minecraft and modloader Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-fabric_loader_version=0.15.3
-neoforge_version = 20.4.181
+minecraft_version=1.21
+fabric_loader_version=0.15.11
+neoforge_version = 21.0.83-beta
 
 # Mod Properties
-mod_version = 1.1.5
+mod_version = 1.1.6
 maven_group = me.legosteenjaap
 archives_base_name = horseinboat
