--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,6 +1,4 @@
-#public-f net.minecraft.world.entity.Entity m_20191_()Lnet/minecraft/world/phys/AABB; # getBoundingBox
-#public-f net.minecraft.world.entity.Entity m_20192_()F # getEyeHeight
-#public net.minecraft.world.entity.vehicle.Boat m_213801_()I # getMaxPassengers
-public-f net.minecraft.world.entity.Entity getBoundingBox()Lnet/minecraft/world/phys/AABB; # getBoundingBox
-public-f net.minecraft.world.entity.Entity getEyeHeight()F # getEyeHeight
-public net.minecraft.world.entity.vehicle.Boat getMaxPassengers()I # getMaxPassengers
+public-f net.minecraft.world.entity.Entity getBoundingBox()Lnet/minecraft/world/phys/AABB;
+public-f net.minecraft.world.entity.Entity getEyeHeight()F
+public-f net.minecraft.world.entity.LivingEntity getDimensions(Lnet/minecraft/world/entity/Pose;)Lnet/minecraft/world/entity/EntityDimensions;
+public net.minecraft.world.entity.vehicle.Boat getMaxPassengers()I
