--- a/.github/workflows/upload_version_fabric.yml
+++ b/.github/workflows/upload_version_fabric.yml
@@ -66,7 +66,7 @@ jobs:
           github-token: "${{env.GITHUB_TOKEN}}"
           github-commitish: "1.21"
 
-          name: "$v{{env.VERSION}}"
+          name: "v${{env.VERSION}}"
           version: "${{env.VERSION}}"
           version-type: release
           changelog-file: CHANGELOG.md
