--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,13 @@ org.gradle.jvmargs=-Xmx2G
 
 # Minecraft and modloader Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-fabric_loader_version=0.15.11
-neoforge_version = 21.0.83-beta
+minecraft_version=1.21.1
+fabric_loader_version=0.16.9
+neoforge_version = 21.1.85
 
 # Mod Properties
 mod_version = 1.1.6
 maven_group = me.legosteenjaap
 archives_base_name = horseinboat
+
+loom.allowMismatchedPlatformVersion = true
